--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -20,7 +20,7 @@
   font-style: normal;
   font-size: 18px;
   line-height: 1.5;
-  color: #f65282;
+  color: #8a1253;
   font-weight: bold;
 }
 .WeatherForecast-temperatures .WeatherForecast-temperature-min {
